--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
+    "code-runner.runInTerminal": true,
     "python.defaultInterpreterPath": "D:\\LATIHAN PEMROGRAMAN\\PYTHON_FRAMEWORK\\Env\\Scripts\\python",
     "editor.minimap.enabled": false,
-    "workbench.colorTheme": "Dracula",
-    "workbench.iconTheme": "vscode-icons"
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
+    // "workbench.colorTheme": "Dracula",
+    "workbench.colorTheme": "Default Dark+",
+    "workbench.iconTheme": "vscode-icons",
 }
