--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
     "code-runner.runInTerminal": true,
-    "python.defaultInterpreterPath": "D:\\LATIHAN PEMROGRAMAN\\PYTHON_FRAMEWORK\\Env\\Scripts\\python",
+    "django.snippets.use": true,
     "editor.minimap.enabled": false,
+    "editor.suggest.showSnippets": true,
+    "extensions.ignoreRecommendations": true,
+    "html.autoClosingTags": true,
+    "html.completion.attributeDefaultValue": "doublequotes",
+    "html.format.templating": true,
+    "python.defaultInterpreterPath": "D:\\LATIHAN PEMROGRAMAN\\PYTHON_FRAMEWORK\\Env\\Scripts\\python",
     "terminal.integrated.defaultProfile.windows": "Command Prompt",
     // "workbench.colorTheme": "Dracula",
     "workbench.colorTheme": "Default Dark+",
